--- a/generator/template/component/style/index.styl
+++ b/generator/template/component/style/index.styl
@@ -1,5 +1,5 @@
 .HelloWorld
   &_wrapper
-    display: flex
-    justify-content: center
-    align-items: center
+    display flex
+    justify-content center
+    align-items center
